@@ -547,6 +547,9 @@ Release 2.6.0 - UNRELEASED
     HDFS-7181. Remove incorrect precondition check on key length in
     FileEncryptionInfo. (wang)
 
+    HDFS-7162. Wrong path when deleting through fuse-dfs a file which already
+    exists in trash (Chenging Liu via cmccabe)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HDFS-6387. HDFS CLI admin tool for creating & deleting an
